# attendance-system

./: .gitignore  README.md  attendance_system.db  enrollment_system.py  face_detector.ipynb  faiss_user_id_map.npy  inspect_models.py  kcc.db  main.py  people.db  pyproject.toml  recognition_system.py  reset.sh  tasks.md
docs/: architecture.md
poc/: server.py  ui.py
src/: config.py  enrollment_system.py  main.py
src/api/: index.py  test.py  wsgi.py
src/core/: __init__.py  attendance_system.db  blazeface_utils.py  enrollment_processor.py  face_utils.py  faiss_inspector.py  faiss_user_id_map.npy  inspect_models.py  log_config.py  recognition_system.py
src/db/: index.py
src/ipc/: socket_server.py
src/ui/: ipc_client.py  test.py  ui.py
