[project]
name = "attendance-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.17"
dependencies = [
    "ai-edge-litert>=1.3.0",
    "faiss-cpu>=1.11.0",
    "flask>=3.1.1",
    "opencv-python>=4.11.0.86",
    "peewee>=3.18.1",
    "pyside6>=6.9.0",
    "requests>=2.32.3",
    "tensorflow",
]
